Change search form to get method + remove csrf protection

--- a/templates/form/theme.html.twig
+++ b/templates/form/theme.html.twig
@@ -39,7 +39,7 @@
     </div>
 {% endblock %}
 
-{% block _member_search_voteValue_widget %}
+{% block _voteValue_widget %}
     <div class="btn-group" role="group">
         {% for child in form.children %}
             {{ form_widget(child) }}
@@ -47,7 +47,7 @@
     </div>
 {% endblock %}
 
-{% block _member_search_voteValue_entry_widget %}
+{% block _voteValue_entry_widget %}
     <input {{ block('widget_attributes') }} type="checkbox" class="btn-check" {{ false == checked ?: 'checked' }} autocomplete="off" value="{{ value }}">
     <label class="btn btn-outline-primary" for="{{ id }}">{{ label|trans }}</label>
 {% endblock %}
